Fixed : Homepage minor ui bleed

--- a/src/components/BottomNavigation/bottomNavigationBar.css
+++ b/src/components/BottomNavigation/bottomNavigationBar.css
@@ -1,28 +1,40 @@
 .bottomNavigationBar {
-    position: fixed;
-    z-index: 2;
-    bottom: 0;
-    width: -webkit-fill-available;
+  position: fixed;
+  z-index: 2;
+  width: 96%;
+  left: 2%;
+  bottom: 0;
+  transform: translate(0%, -5%);
 }
-.bottomNavigationBarBox svg{
-    font-size: 1.2rem;
+.MuiBottomNavigation-root {
+  background-color: #ffffff14 !important;
+  backdrop-filter: blur(4.9px) !important;
+  -webkit-backdrop-filter: blur(4.9px) !important;
+  border-radius: 5px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px !important;
 }
-.bottomNavigationBarBox span{
-    font-weight: 600;
-    margin-top: 3px;
-    font-size: .7rem !important;
+.bottomNavigationBarBox svg {
+  font-size: 1.2rem;
 }
-.css-1bjk3jo-MuiButtonBase-root-MuiBottomNavigationAction-root.Mui-selected{
-    font-size: .8rem !important;
-    color: var(--lightGreen) !important;
+.bottomNavigationBarBox span {
+  font-weight: 600;
+  margin-top: 3px;
+  font-size: 0.7rem !important;
 }
-
+.bottomNavigationBarBox button .Mui-selected {
+  font-size: 0.8rem !important;
+  color: var(--lightGreen) !important;
+}
+.bottomNavigationBarBox .Mui-selected svg {
+  color: var(--lightGreen) !important;
+}
 .bottomNavigationBar {
-    display: none;
+  display: none;
 }
 /* first break point */
 @media only screen and (max-width: 768px) {
-    .bottomNavigationBar {
-        display: block;
-    }
+  .bottomNavigationBar {
+    display: block;
+  }
 }
