--- a/src/components/HomeComp/Banner/Banner.css
+++ b/src/components/HomeComp/Banner/Banner.css
@@ -83,7 +83,7 @@
     font-size: 1rem;
   }
   .bannerOptions button {
-    background-color: #bcf6c4;
+    background-color: white;
     padding: 0.3rem .5rem;
   }
 }
