--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -130,12 +130,6 @@
 /* second break point */
 @media only screen and (max-width: 768px) {
   .navbar {
-    background: rgb(0 0 0 / 21%);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(4.9px);
-    -webkit-backdrop-filter: blur(4.9px);
-    position: fixed;
-    z-index: 2;
     width: -webkit-fill-available;
     justify-content: space-between;
   }
